# whest

./: .gitignore  .gitlint  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODOS.md  WHESTBENCH-PYRIGHT-CLEANUP.md  __next.!KGhvbWUp.__PAGE__.txt  __next.!KGhvbWUp.txt  __next._head.txt  __next._tree.txt  index.html  index.txt  llms-full.txt  llms.txt  mkdocs.yml  ops.json  pyproject.toml  report.html  reviewer_feedback.json  reviewer_feedback_actions.md  reviewer_feedback_slack.md  weights.json
.aicrowd/: CONTEXT.md
.githooks/: pre-push
.github/: docs-dispatch.workflow.test.mjs
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html
api/: search
benchmarks/: __init__.py  __main__.py  _baseline.py  _bitwise.py  _complex.py  _contractions.py  _fft.py  _impl_urls.py  _linalg.py  _linalg_delegates.py  _metadata.py  _misc.py  _perf.py  _pointwise.py  _polynomial.py  _random.py  _reductions.py  _sorting.py  _stats.py  _window.py  dashboard.py  overhead_exclusions.json  overhead_thresholds.json  runner.py
docker/: Dockerfile.participant  Dockerfile.participant-hardened  Dockerfile.server  README.md  docker-compose.yml  entrypoint.py  entrypoint.sh
docs/: changelog.md  index.md  ops.json  quickstart.md
examples/: 01_basic_usage.py  02_einsum_patterns.py  03_symmetry_savings.py  04_svd_usage.py  05_budget_planning.py  06_namespaces_and_display.py  07_einsum_path.py  08_declared_symmetry.py  09_linalg_and_fft.py  10_optimize_strategies.py  11_stats_distributions.py  symmetry_detection_examples.py
flopscope-client/: pyproject.toml
flopscope-client/src/flopscope/: __init__.py  _budget.py  _comms_tracker.py  _connection.py  _display.py  _getattr.py  _math_compat.py  _perm_group.py  _registry.py  _registry_data.py  _remote_array.py  _symmetric_info.py  _weights.py  accounting.py  errors.py  flops.py
flopscope-client/src/flopscope/data/: __init__.py  default_weights.json
flopscope-client/src/flopscope/fft/: __init__.py
flopscope-client/src/flopscope/numpy/: __init__.py
flopscope-client/src/flopscope/numpy/linalg/: __init__.py
flopscope-client/src/flopscope/random/: __init__.py
flopscope-client/src/flopscope/stats/: __init__.py
flopscope-client/tests/: test_adversarial.py  test_api_surface.py  test_budget.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_comms_tracker.py  test_connection.py  test_errors.py  test_exhaustive.py  test_full_integration.py  test_integration.py  test_math_compat.py  test_new_type_encoding.py  test_protocol_trace.py  test_remote_array.py  test_weights.py
flopscope-server/: pyproject.toml
flopscope-server/src/flopscope_server/: __init__.py  __main__.py  _array_store.py  _protocol.py  _request_handler.py  _server.py  _session.py
flopscope-server/tests/: test_array_store.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_comms_tracker.py  test_new_types.py  test_protocol.py  test_request_handler.py  test_server.py  test_session.py
mechestim-client/: pyproject.toml
mechestim-client/src/mechestim/: __init__.py  _budget.py  _comms_tracker.py  _connection.py  _constants.py  _getattr.py  _protocol.py  _registry.py  _registry_data.py  _remote_array.py  _symmetric_info.py  errors.py  flops.py
mechestim-client/src/mechestim/fft/: __init__.py
mechestim-client/src/mechestim/linalg/: __init__.py
mechestim-client/src/mechestim/random/: __init__.py
mechestim-client/src/mechestim/stats/: __init__.py
mechestim-client/tests/: test_adversarial.py  test_api_surface.py  test_budget.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_comms_tracker.py  test_connection.py  test_errors.py  test_exhaustive.py  test_full_integration.py  test_integration.py  test_math_compat.py  test_new_type_encoding.py  test_protocol_trace.py  test_remote_array.py
mechestim-server/: pyproject.toml
mechestim-server/src/mechestim_server/: __main__.py  _array_store.py  _comms_tracker.py  _protocol.py  _request_handler.py  _server.py  _session.py
mechestim-server/tests/: test_array_store.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_comms_tracker.py  test_new_types.py  test_protocol.py  test_request_handler.py  test_server.py  test_session.py
scripts/: apply_reviewer_feedback.py  compare_costs.py  debug_phi.py  generate_api_docs.py  generate_default_weights.py  generate_empirical_weights_docs.py  migrate_to_docusaurus.py  numpy_audit.py  sync_client.py  upload_to_sheets.py  verify_phi_match.py  verify_psi_match.py
symmetry-aware-einsum-contractions/: __next._head.txt  __next._tree.txt  __next.symmetry-aware-einsum-contractions.__PAGE__.txt  index.html  index.txt
tests/: conftest.py  test_accounting.py  test_accounting_reduction_cost_unchanged_signature.py  test_accounting_submodule.py  test_audit.py  (+135 more)
whest-client/: pyproject.toml
whest-client/src/whest/: __init__.py  _budget.py  _comms_tracker.py  _connection.py  _display.py  _getattr.py  _math_compat.py  _perm_group.py  _protocol.py  _registry.py  _registry_data.py  _remote_array.py  _symmetric_info.py  _weights.py  errors.py  flops.py
whest-client/src/whest/data/: __init__.py
whest-client/src/whest/fft/: __init__.py
whest-client/src/whest/linalg/: __init__.py
whest-client/src/whest/random/: __init__.py
whest-client/src/whest/stats/: __init__.py
whest-client/tests/: test_adversarial.py  test_api_surface.py  test_budget.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_comms_tracker.py  test_connection.py  test_errors.py  test_exhaustive.py  test_full_integration.py  test_integration.py  test_math_compat.py  test_new_type_encoding.py  test_protocol_trace.py  test_remote_array.py  test_weights.py
whest-server/: pyproject.toml
whest-server/src/whest_server/: __init__.py  __main__.py  _array_store.py  _protocol.py  _request_handler.py  _server.py  _session.py
whest-server/tests/: test_array_store.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_comms_tracker.py  test_new_types.py  test_protocol.py  test_request_handler.py  test_server.py  test_session.py
(+9873 files in other folders)
