[project]
name = "flopscope"
version = "0.2.0"
description = "NumPy-compatible math primitives with FLOP counting for the Mechanistic Estimation Challenge"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=2.0.0,<2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "psutil>=5.9",
    "rich>=13.0",
    "ruff>=0.4",
    "scipy>=1.10",
]
docs = [
    "numpydoc>=1.8",
]
sympy = [
    "sympy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flopscope", "benchmarks"]

[tool.hatch.build.targets.wheel.force-include]
"src/flopscope/data/default_weights.json" = "flopscope/data/default_weights.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/numpy_compat -n auto"

[tool.coverage.run]
source = ["flopscope"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
extend-select = ["B", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
# Public re-exports: imports are intentionally "unused" from ruff's perspective
"src/flopscope/random/__init__.py" = ["F401"]
"src/flopscope/stats/__init__.py" = ["F401"]
# Deferred imports after version-check call trigger E402; compact guards use E701
"src/flopscope/__init__.py" = ["E402"]
"src/flopscope/fft/_transforms.py" = ["E701"]
# Tests: unused variables are intentional (assert no exception raised)
"tests/**" = ["F841", "E402", "E501"]
# Benchmarks: long f-strings for subprocess setup code
"benchmarks/**" = ["E501"]
# Scripts, examples, docker: cosmetic issues not worth fixing in utility code
"scripts/**" = ["E501", "E402", "F401", "F841"]
"examples/**" = ["E501", "E402", "F401", "F841"]
"docker/**" = ["E501", "E402", "F401", "F841"]
# Client/server packages: E402 in __init__.py (deferred imports pattern)
"flopscope-client/**" = ["E402", "F401", "E501", "F841"]
"flopscope-server/**" = ["E402", "F401", "E501", "F841"]
# Core source: long lines in dense function signatures and docstrings
"src/**" = ["E501"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "pytest-xdist>=3.8.0",
]
