[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flopscope-client"
version = "0.1.0"
description = "Lightweight flopscope client — drop-in replacement with no numpy dependency"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flopscope"]

[tool.hatch.build.targets.wheel.force-include]
"src/flopscope/data/default_weights.json" = "flopscope/data/default_weights.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/flopscope/data/default_weights.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
