[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flopscope-server"
version = "0.1.0"
description = "Backend server for flopscope client-server architecture"
requires-python = ">=3.10"
dependencies = [
    "flopscope>=0.2.0",
    "numpy>=2.0.0,<2.5.0",
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flopscope_server"]

[project.scripts]
flopscope-server = "flopscope_server.__main__:main"

[tool.uv.sources]
flopscope = { path = "../", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
