[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechestim-client"
version = "0.1.0"
description = "Lightweight mechestim client — drop-in replacement with no numpy dependency"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
