[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechestim-server"
version = "0.1.0"
description = "Backend server for mechestim client-server architecture"
requires-python = ">=3.10"
dependencies = [
    "mechestim>=0.2.0",
    "numpy>=2.1.0,<2.2.0",
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]

[project.scripts]
mechestim-server = "mechestim_server.__main__:main"
