[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whest-client"
version = "0.1.0"
description = "Lightweight whest client — drop-in replacement with no numpy dependency"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/whest"]

[tool.hatch.build.targets.wheel.force-include]
"src/whest/data/default_weights.json" = "whest/data/default_weights.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/whest/data/default_weights.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
