[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechestim-server"
version = "0.1.0"
description = "Backend server for mechestim client-server architecture"
requires-python = ">=3.10"
dependencies = [
    "mechestim>=0.2.0",
    "numpy>=2.0.0,<2.3.0",
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mechestim_server"]

[project.scripts]
mechestim-server = "mechestim_server.__main__:main"

[tool.uv.sources]
mechestim = { path = "../", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
